--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <label for="dokter_umum" class="form-label">Dokter Umum</label>
             </div>
             <div class="col-md-3">
-              <select class="form-select" id="dokter_umum" name="dokter umum">
+              <select class="form-select" id="dokter_umum" name="dokter umum" required>
                 <option selected value="zico permadi, MD">zico permadi, MD</option>
                 <option value="Tri Widyastuti">Tri Widyastuti</option>
                 <option value="2" disabled>Two</option>
@@ -80,7 +80,7 @@
               <label for="keluhan_utama" class="form-label">Keluhan Utama</label>
             </div>
             <div class="col-md-5">
-              <textarea class="form-control" rows="3" id="keluhan_utama" name="keluhan utama"></textarea>
+              <textarea class="form-control" rows="3" id="keluhan_utama" name="keluhan utama" required></textarea>
             </div>
           </div>
         </div>
@@ -98,7 +98,7 @@
               <label for="kesadaran" class="form-label">Kesadaran</label>
             </div>
             <div class="col-md-4">
-              <select class="form-select form-select-sm" aria-label="Default select example" id="kesadaran" name="kesadaran">
+              <select class="form-select form-select-sm" aria-label="Default select example" id="kesadaran" name="kesadaran" required>
                 <option selected value="Compos Mentis">Compos Mentis</option>
                 <option value="Somnolen">Somnolen</option>
                 <option value="Sopor">Sopor</option>
@@ -109,7 +109,7 @@
               <label for="suhu" class="form-label">Suhu</label>
             </div>
             <div class="col-md-4">
-              <textarea class="form-control form-control-sm" placeholder="°C" id="suhu" rows="1" name="suhu"></textarea>
+              <textarea class="form-control form-control-sm" placeholder="°C" id="suhu" rows="1" name="suhu" required></textarea>
             </div>
           </div>
         </div>
@@ -123,13 +123,13 @@
               <label for="sistole" class="form-label">Sistole</label>
             </div>
             <div class="col-md-4">
-              <textarea class="form-control form-control-sm" placeholder="mmHg" id="sistole" rows="1" name="sistole"></textarea>
+              <textarea class="form-control form-control-sm" placeholder="mmHg" id="sistole" rows="1" name="sistole" required></textarea>
             </div>
             <div class="col-md-2">
               <label for="diastole" class="form-label">Diastole</label>
             </div>
             <div class="col-md-4">
-              <textarea class="form-control form-control-sm" placeholder="mmHg" id="diastole" rows="1" name="diastole"></textarea>
+              <textarea class="form-control form-control-sm" placeholder="mmHg" id="diastole" rows="1" name="diastole" required></textarea>
             </div>
           </div>
         </div>
@@ -143,13 +143,13 @@
               <label for="nadi" class="form-label">Nadi</label>
             </div>
             <div class="col-md-4">
-              <textarea class="form-control form-control-sm" placeholder="x/menit" id="nadi" rows="1" name="nadi"></textarea>
+              <textarea class="form-control form-control-sm" placeholder="x/menit" id="nadi" rows="1" name="nadi" required></textarea>
             </div>
             <div class="col-md-2">
               <label for="nafas" class="form-label">Nafas</label>
             </div>
             <div class="col-md-4">
-              <textarea class="form-control form-control-sm" placeholder="x/menit" id="nafas" rows="1" name="nafas"></textarea>
+              <textarea class="form-control form-control-sm" placeholder="x/menit" id="nafas" rows="1" name="nafas" required></textarea>
             </div>
           </div>
         </div>
@@ -163,13 +163,13 @@
               <label for="beratbadan" class="form-label">Berat badan (BB)</label>
             </div>
             <div class="col-md-4">
-              <textarea class="form-control form-control-sm" placeholder="Kg" id="beratbadan" rows="1" name="BB"></textarea>
+              <textarea class="form-control form-control-sm" placeholder="Kg" id="beratbadan" rows="1" name="BB" required></textarea>
             </div>
             <div class="col-md-2">
               <label for="tinggibadan" class="form-label">Tinggi badan (TB)</label>
             </div>
             <div class="col-md-4">
-              <textarea class="form-control form-control-sm" placeholder="Cm" id="tinggibadan" rows="1" name="TB"></textarea>
+              <textarea class="form-control form-control-sm" placeholder="Cm" id="tinggibadan" rows="1" name="TB" required></textarea>
             </div>
           </div>
         </div>
@@ -211,10 +211,10 @@
               <label for="diagnosa" class="form-label">Dx</label>
             </div>
             <div class="col-md-4">
-              <textarea class="form-control form-control-sm" placeholder="" id="diagnosa" rows="1" name="diagnosa"></textarea>
+              <textarea class="form-control form-control-sm" placeholder="" id="diagnosa" rows="1" name="diagnosa" required></textarea>
             </div>
             <div class="col-md-2">
-              <button type="add" class="btn btn-outline-primary btn-sm btntambah">add</button>
+              <button type="add" class="btn btn-outline-primary btn-sm btntambah" onclick="javascript:">add</button>
             </div>
           </div>
         </div>
@@ -230,7 +230,7 @@
           <div class="row">
             <div class="col-md-5">
               <label for="resep" class="form-label"></label>
-              <textarea class="form-control form-control" placeholder="" id="resep" rows="3" name="resep"></textarea>
+              <textarea class="form-control form-control" placeholder="" id="resep" rows="3" name="resep" required></textarea>
             </div>
           </div>
         </div>
@@ -266,7 +266,7 @@
           <div class="modal-body text-center">Apakah anda membutuhkan bantuan dari Team Customer Support?</div>
           <div class="modal-footer justify-content-center">
             <button type="button" class="btn btn-danger" data-bs-dismiss="modal">No</button>
-            <button type="button" class="btn btn-primary"><a class="text-light" href="https://wa.me/+6285960200947">Yes</a></button>
+            <button type="button" class="btn btn-primary"><a class="text-light" href="https://wa.me/+6285960200947" target="_blank">Yes</a></button>
           </div>
         </div>
       </div>
